bug 128915, prevent crash on empty S/MIME profiles